main.css
html {
  scroll-behavior: smooth;
}

body {
  font-family: 'Roboto', sans-serif;
  margin: 0;
}

a {
  text-decoration: none;
  color: black;
}

.container {
  display: grid;
  grid-template-columns: repeat(5, 20%);
}

.leader--image {
  text-align: center;
  background-color: black;
  background: url(dark-eating-floor-734562.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  grid-column-start: 4;
  grid-column-end: 6;
}

.explanation {
  background-color: #C6D8D3;
  grid-column-start: 1;
  grid-column-end: 4;
  grid-row-start: 1;
  grid-row-end: 1;
  padding: 0 2rem;
}

.pre-submit, .submitting, #thanks {
  grid-column-start: 1;
  grid-column-end: 6;
  padding: 3rem 4rem;
}

#thanks {
  text-align: center;
}

h1 {
  font-size: 3rem;
  line-height: 1.2;
}

h2 {
  font-size: 2rem;
  line-height: 1.2;
}

.text {
  font-size: 1.2rem;
  line-height: 1.4;
}

.cta {
  margin: 4rem;
  text-align: center;
}

.join {
  margin-bottom: 0;
}

.action {
  text-transform: uppercase;
  min-width: 5em;
  font-size: .9rem;
  height: 4em;
  line-height: 4em;
  border-radius: 2rem;
  display: inline-block;
  padding: 0 4em;
  border: 1px solid #3A3335;
  text-align: center;
  cursor: pointer;
}

.action:hover {
  border-color: #197BBD;
  color: #197BBD;
}

.form--content {
  font-size: 1.5rem;
  margin: 4rem;
  padding: 4rem;
  border: 1px solid #d3d3d3;
}

input {
  outline: 0;
  border-width: 0 0 2px;
  border-color: black;
  text-align: center;
}

input:focus {
  border-color: #197BBD;
}

input.site_name {
  font-size: 1.5rem;
  text-align: center;
}

input {
  font-size: 1rem;
}

::-webkit-input-placeholder { /* Edge */
  color: #d3d3d3;
}

:-ms-input-placeholder { /* Internet Explorer 10-11 */
  color: #d3d3d3;
}

::placeholder {
  color: #d3d3d3;
}

.form--row {
  margin-top: 3rem;
}

#email-invalid {
  color: red;
  display: none;
  font-size: 1rem;
}

#thanks {
  display: none;
}

.submitting {
  display: none;
}


@media screen and (max-width: 640px){

  .container {
    display: flex;
    flex-direction: column;
  }

  .leader--image {
    height: 400px;
    background: url(dark-eating-floor-horizontal.jpg);
    background-size: cover;
    order: 1;
  }

  .explanation {
    order: 3;
    padding: 0 2rem 2rem 2rem;
  }

  h1 {
    font-size: 2rem;
  }

  h2 {
    font-size: 1.6rem;
  }
  .pre-submit {
    order: 4;
    padding: 2rem;
  }

  .submitting, #thanks {
    order: 2;
    padding: 4rem;
  }

  .form--content {
    margin: 0;
    padding: 0;
    border: 0;
  }

  .cta {
    margin: 4rem 0;
  }

  .http {
    display: none;
  }

  .form--row {
    font-size: 1rem;
    text-align: center;
  }

  .input_text {
    width: 8rem;
  }
}

